[package]
name = "lbs-core"
version = "0.1.0"
edition = "2024"
description = "LBS core"
license = "MIT"
repository = "https://github.com/lyonux/lbs/tree/main/lbs-core"
homepage = "https://github.com/lyonux/lbs/blob/main/README.md"
keywords = ["task", "distribution", "async"]
categories = ["asynchronous"]

[dependencies]
anyhow = "1.0"
nix = "0.31.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
lyo = "0.1.2"
