[package]
name = "lynx"
version = "0.1.0"
edition = "2024"
description = "Network rule processor using tokio ecosystem"
authors = ["lynx contributors"]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
notify = { version = "8.0", features = ["serde"] }
ipnetwork = "0.21"
nix = { version = "0.29", features = ["net", "fs"] }
shell-words = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
