[package]
name = "napt"
version = "0.1.0"
edition = "2024"
description = "Network rule processor using tokio ecosystem"
authors = ["lyon <leenus1024@gmail.com>"]
repository = "https://github.com/lyonux/lbs"
license = "MIT"
homepage = "https://github.com/lyonux/lbs/blob/main/README.md"
keywords = ["network"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
notify = { version = "8.0", features = ["serde"] }
ipnetwork = "0.21"
nix = { version = "0.29", features = ["net", "fs"] }
shell-words = "1.0"
rtnetlink = "0.20.0"
futures = "0.3.32"
netlink-packet-route = "0.28"
netlink-packet-core = "0.8.1"
netlink-packet-utils = "0.6.0"
lbs-core = { version = "0.1", path = "../lbs-core" }
lyo = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/napt", dest = "/usr/local/bin/napt", mode = "755" },
    { source = "napt/examples/config.toml", dest = "/var/lib/napt/config.toml", config = "noreplace", mode = "644" },
    { source = "napt/systemd/napt.service", dest = "/usr/lib/systemd/system/napt.service", mode = "644" },
]
post_install_script = """systemctl daemon-reload"""
post_uninstall_script = """systemctl stop napt || true
systemctl disable napt || true
systemctl daemon-reload"""
